--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 		<script src="https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js"></script>
 		<script src="https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js"></script>
 		<script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+		<script src="https://tylermcginnis.com/goals-todos-api/index.js"></script>
+		<script src="https://unpkg.com/redux-thunk@2.2.0/dist/redux-thunk.min.js"></script>
 		<title>Udacity todo list</title>
 	</head>
 	<body>
-		<div>
+		<!-- <div>
 			<h1>Todo List</h1>
 			<input type="text" name="todo" id="todo" placeholder="Add Todo" />
 			<button id="todoBtn">Add Todo</button>
@@ -23,11 +25,11 @@
 			<button id="goalBtn">Add Goal</button>
 
 			<ul id="goals"></ul>
-        </div>
+        </div> -->
         <hr/>
         <div id="app"></div>
 
-        <script src="./index.js"></script>
-        <script type="text/babel" src="./app.js"></script>
+        <script type="text/babel" src="./index.js"></script>
+       
 	</body>
 </html>
